--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -9,7 +9,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
-    background-color: lighten($tritaryColor, 55%);
+    background-color: lighten($tritaryColor, 60%);
 } 
  
 
@@ -87,7 +87,7 @@ main {
     padding: 0 2%;
     min-height: 10rem;
     margin-bottom: 100px;
-    background-color: lighten($tritaryColor, 50%);
+    background-color: lighten($tritaryColor, 55%);
     h1{
         margin: 0;
         padding-top: 30px;
